update engery